--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,36 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  overflow: hidden;
+
+  background: #0a1828 url("./assets/images/stars.png") repeat;
+}
+
+body::after {
+  content: "";
+
+  z-index: -1;
+  position: absolute;
+  top: 0px;
+  right: 0;
+
+  width: 10000px;
+  height: 100%;
+
+  background-size: 1000px 1000px;
+  background: transparent url("./assets/images/twinklingDarkBlue.png") repeat;
+
+  animation: move-background 30s linear infinite;
+}
+
+@keyframes move-background {
+  from {
+    transform: translate3d(0px, 0px, 0px);
+  }
+  to {
+    transform: translate3d(1000px, 0px, 0px);
+  }
 }
 
 code {
