--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   overflow: hidden;
 
   background: #0a1828 url("./assets/images/stars.png") repeat;
+  background-position: center;
 }
 
 body::after {
@@ -85,4 +86,16 @@ img {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+main {
+ position: relative;
+  height: 90vh;
+}
+
+section {
+  font-size: 24px;
+  color: #bfa181;
+
+  text-align: center;
 }
