--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,22 @@ html {
   scroll-behavior: smooth;
 }
 /* Extra small devices (landscape tablets, 320px and down) */
+
 @media only screen and (max-width: 320px) {
   html {
-    font-size: 14px;
+    font-size:10px;
+  }
+}
+/*  small devices (landscape tablets, 320px and up) */
+@media only screen and (min-width: 321px) {
+  html {
+    font-size:13px;
   }
 }
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   html {
-    font-size: 30px;
+    font-size: 32px;
   }
 }
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -65,6 +72,7 @@ body::after {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+   color:#55bbb5 ;
 }
 
 h1,
@@ -104,4 +112,6 @@ img {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+
 }
+
